tests/baselines/reference/umd-errors(strict=true).errors.txt
err1.d.ts(2,1): error TS1314: Global module exports may only appear in module files.
err2.d.ts(3,2): error TS1316: Global module exports may only appear at top level.
err3.d.ts(2,12): error TS7005: Variable 'p' implicitly has an 'any' type.
err3.d.ts(3,1): error TS1184: Modifiers cannot appear here.
err3.d.ts(4,1): error TS1184: Modifiers cannot appear here.
err3.d.ts(5,1): error TS1184: Modifiers cannot appear here.
err3.d.ts(6,7): error TS1389: 'export' is not allowed as a variable declaration name.
err4.d.ts(3,2): error TS1316: Global module exports may only appear at top level.
err5.ts(2,12): error TS7005: Variable 'v' implicitly has an 'any' type.
err5.ts(3,1): error TS1315: Global module exports may only appear in declaration files.


==== err1.d.ts (1 errors) ====
    // Illegal, can't be in script file
    export as namespace Foo;
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1314: Global module exports may only appear in module files.
    
==== err2.d.ts (1 errors) ====
    // Illegal, can't be in external ambient module
    declare module "Foo" {
    	export as namespace Bar;
    	~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1316: Global module exports may only appear at top level.
    }
    
==== err3.d.ts (5 errors) ====
    // Illegal, can't have modifiers
    export var p;
               ~
!!! error TS7005: Variable 'p' implicitly has an 'any' type.
    static export as namespace oo1;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1184: Modifiers cannot appear here.
    declare export as namespace oo2;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1184: Modifiers cannot appear here.
    public export as namespace oo3;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1184: Modifiers cannot appear here.
    const export as namespace oo4;
          ~~~~~~
!!! error TS1389: 'export' is not allowed as a variable declaration name.
    
==== err4.d.ts (1 errors) ====
    // Illegal, must be at top-level
    export namespace B {
    	export as namespace C1;
    	~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1316: Global module exports may only appear at top level.
    }
    
==== err5.ts (2 errors) ====
    // Illegal, may not appear in implementation files
    export var v;
               ~
!!! error TS7005: Variable 'v' implicitly has an 'any' type.
    export as namespace C2;
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1315: Global module exports may only appear in declaration files.
    
    